--- a/matx-react-master-master/package.json
+++ b/matx-react-master-master/package.json
@@ -14,6 +14,7 @@
     "autosuggest-highlight": "^3.2.0",
     "axios": "^0.24.0",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^5.2.3",
     "clsx": "^1.1.1",
     "cross-fetch": "^3.1.4",
     "date-fns": "^2.26.0",
@@ -28,6 +29,7 @@
     "notistack": "^2.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
     "react-material-ui-form-validator": "^3.0.0",
     "react-perfect-scrollbar": "^1.5.8",
